# news-3001

./: .env.example  .gitignore  AGENTS.md  AI_AGENT_GUIDE.md  PRODUCTION.md  README.md  config.json  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.yml  nginx.conf  run.py  telemetry-id  thingsbreaksometime.sh
backend/: Dockerfile  content_scraper.py  main.py  pyproject.toml  rss.py
data/: news_data.json
extras/: old-newflow.excalidraw  pocketbasecollectionshema.json
frontend/: sitemap.txt
homepage/: index.html
nginx/: Dockerfile
plans/: homepage-showcase.md  non_article_link_reject_plan.md  openrouter_safety_rewrite_plan.md  (+1 more)
server/: .dockerignore  Dockerfile  content_scraper.py  contentscraper.py  main.py  myclasses.py  objects.py  pyproject.toml  rss.py  run_scraper.py  scrape.py  server.py
server/db/: CRUD.py
server/db/crud/: news.py  stats.py
server/db/crud/stats/: _queries.py
server/openrouter/: badges.py  openrouter_client.py  report.py
server/scraper/: __init__.py  enrichment.py  fetchers.py  filters.py  models.py  pipeline.py  rules.py  server.py  storage.py
server/scraper/rules/: __init__.py  blocked_domain_reject.py  common.py  content_no_local_reject.py  content_rules.py  content_strong_local_pass.py  content_too_short_reject.py  non_article_link_reject.py  runner.py  snippet_local_keyword_pass.py  snippet_rules.py  snippet_strong_non_local_reject.py
server/tests/: test_storage_testing_report.py  test_unique_news_sources.py
server/tests/rules/: run_rules_tests.py  test_source_fuzzy_match.py
ui/: Dockerfile  (+9 more)
(+67 files in other folders)
