[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "openai>=2.14.0",
    "pocketbase>=0.15.0",
    "serpapi>=0.1.5",
    "uvicorn>=0.40.0",
]
